k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce-dev
  labels:
    name: ecommerce-dev
    environment: development
---
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce-stage
  labels:
    name: ecommerce-stage
    environment: staging
---
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce-prod
  labels:
    name: ecommerce-prod
    environment: production
