k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: ecommerce-prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: ecommerce.local
    http:
      paths:
      - path: /user-service
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 8700
      - path: /product-service
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 8500
      - path: /order-service
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 8600
      - path: /payment-service
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 8400
      - path: /favourite-service
        pathType: Prefix
        backend:
          service:
            name: favourite-service
            port:
              number: 8300
      - path: /proxy-client
        pathType: Prefix
        backend:
          service:
            name: proxy-client
            port:
              number: 8200
      - path: /api-gateway
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 8080
      - path: /service-discovery
        pathType: Prefix
        backend:
          service:
            name: service-discovery
            port:
              number: 8761
      - path: /zipkin
        pathType: Prefix
        backend:
          service:
            name: zipkin
            port:
              number: 9411
      - path: /cloud-config
        pathType: Prefix
        backend:
          service:
            name: cloud-config
            port:
              number: 8888
